remove GET endpoint by chemId which has been replaced.
